--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-express-starter",
+  "name": "brewery-db-get-details",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
